# dsc-booking

./: .env  Cargo.toml
sql/: add_user.sql
src/: config.rs  db.rs  errors.rs  main.rs  models.rs  services_legacy.rs  services_static_pages.rs
src/core/: db.rs  mod.rs  templator.rs  users.rs
src/models/: mod.rs  session.rs  user.rs
src/models/seat/: availability_status.rs  mod.rs  seat_type.rs
src/models/sql/: add_expirable_session.sql  add_session.sql  add_user.sql  get_user_by_id.sql  get_user_by_login.sql  get_user_by_token.sql  get_users.sql
src/models/sql/seat/: get_all_seats.sql
src/models/sql/user/: get_user_by_id.sql  remove_session_by_token.sql
src/services/: booking.rs  index.rs  legacy.rs  mod.rs  static_pages.rs  users.rs
src/views/: wrap.html
src/views/pages/: about.html  index.html  users.html
static/: main.js
static/css/: fonts.css  fonts.css.map  fonts.scss  style.css  style.css.map  style.scss
style/: welcome.html  wrap.html
style/pages/: index.html
views/: wrap.hbs
views/errors/: seats_unavailable.hbs
views/pages/: about.hbs  index.hbs  login.hbs  register.hbs  register_failed.hbs  register_success.hbs  users.hbs
