[package]
name = "back"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
actix-session = "0.9.0"

[dependencies]
actix-session = { workspace = true, features = ["cookie-session"] }
actix-web = "4"
actix-web-lab = "0.20.2"
actix-files = "0.6.6"

async-stream = "0.3"

env_logger = "0.11.3"
log = "0.4.22"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

upon = "0.8.1"# шаблонизатор

tokio-postgres = "0.7.11"
tokio-pg-mapper = { version =  "0.2.0", features = ["derive"] } # for postgres data mapping
deadpool-postgres = { version = "0.14.0", features = ["serde"] } # postgres pooling

dotenv = "0.15.0" # конфигурации
config = "0.14.0"

derive_more = "0.99.18"
#serde_derive = "1.0.204
